--- a/src/app/pages/add-pet/add-pet.page.html
+++ b/src/app/pages/add-pet/add-pet.page.html
@@ -70,9 +70,10 @@
         type="button"
         (click)="cancelar()"
         class="cancelar-btn"
+        fill="clear"
         >Cancelar</ion-button
       >
-      <ion-button expand="block" type="submit" class="guardar-btn"
+      <ion-button expand="block" type="submit" class="guardar-btn" fill="clear"
         >Guardar Mascota</ion-button
       >
     </div>
