--- a/src/app/pages/pet-detail/pet-detail.page.html
+++ b/src/app/pages/pet-detail/pet-detail.page.html
@@ -1,13 +1,21 @@
 <!-- Encabezado de la página de detalle de mascota -->
 <ion-header class="header">
   <ion-toolbar class="header">
-    <ion-buttons
-      (click)="volverAHome()"
-      class="volver-button"
-      fill="clear"
-      slot="start"
-    >
-      <ion-back-button></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-button class="volver-button" fill="clear" (click)="volverAHome()">
+        <svg
+          class="icon-volver"
+          width="28"
+          height="28"
+          viewBox="0 0 1024 1024"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M669.6 849.6c8.8 8 22.4 7.2 30.4-1.6s7.2-22.4-1.6-30.4l-309.6-280c-8-7.2-8-17.6 0-24.8l309.6-270.4c8.8-8 9.6-21.6 2.4-30.4-8-8.8-21.6-9.6-30.4-2.4L360.8 480.8c-27.2 24-28 64-0.8 88.8l309.6 280z"
+          />
+        </svg>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -26,37 +34,183 @@
     <!-- Nombre de la mascota -->
     <h2 class="mascota-nombre">{{ (mascota?.nombre || '') |capitalize }}</h2>
     <!-- Botón para editar datos de la mascota -->
-    <ion-button
-      expand="block"
-      (click)="editarMascota()"
-      fill="clear"
-      class="editar-button"
-    >
-      Editar
-    </ion-button>
+    <ion-buttons slot="end">
+      <ion-button class="editar-button" fill="clear" (click)="editarMascota()">
+        <svg
+          class="icon-editar"
+          width="26"
+          height="26"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M8.56078 20.2501L20.5608 8.25011L15.7501 3.43945L3.75012 15.4395V20.2501H8.56078ZM15.7501 5.56077L18.4395 8.25011L16.5001 10.1895L13.8108 7.50013L15.7501 5.56077ZM12.7501 8.56079L15.4395 11.2501L7.93946 18.7501H5.25012L5.25012 16.0608L12.7501 8.56079Z"
+          />
+        </svg>
+      </ion-button>
+    </ion-buttons>
   </div>
 
   <!-- Datos en cards -->
-  <div class="mascota-datos-cards">
+  <div class="mascota-datos-cards-scroll">
     <div class="dato-card">
-      <ion-icon name="calendar-outline"></ion-icon>
+      <svg
+        class="dato-svg"
+        width="32"
+        height="32"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path fill="none" d="M0 0h24v24H0z" />
+        <path
+          fill-rule="nonzero"
+          d="M8 6v3.999h3V6h2v3.999h3V6h2v3.999L19 10a3 3 0 0 1 2.995 2.824L22 13v1c0 1.014-.377 1.94-.999 2.645L21 21a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-4.36a4.025 4.025 0 0 1-.972-2.182l-.022-.253L2 14v-1a3 3 0 0 1 2.824-2.995L5 10l1-.001V6h2zm1.002 10.641l-.054.063a3.994 3.994 0 0 1-2.514 1.273l-.23.018L6 18c-.345 0-.68-.044-1-.126V20h14v-2.126a4.007 4.007 0 0 1-3.744-.963l-.15-.15-.106-.117-.107.118a3.99 3.99 0 0 1-2.451 1.214l-.242.02L12 18a3.977 3.977 0 0 1-2.797-1.144l-.15-.157-.051-.058zM19 12H5a1 1 0 0 0-.993.883L4 13v.971l.003.147A2 2 0 0 0 6 16a1.999 1.999 0 0 0 1.98-1.7l.015-.153.005-.176c.036-1.248 1.827-1.293 1.989-.134l.01.134.004.147a2 2 0 0 0 3.992.031l.012-.282c.124-1.156 1.862-1.156 1.986 0l.012.282a2 2 0 0 0 3.99 0L20 14v-1a1 1 0 0 0-.883-.993L19 12zM7 1c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 0 1-2.898-.776C5.85 2.002 7 2.5 7 1zm5 0c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 1 1-2.898-.776C10.85 2.002 12 2.5 12 1zm5 0c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 1 1-2.898-.776C15.85 2.002 17 2.5 17 1z"
+        />
+      </svg>
       <div class="dato-label">Edad</div>
       <div class="dato-valor">
         {{ calcularEdad(mascota?.fechaNacimiento || '') }}
       </div>
     </div>
     <div class="dato-card">
-      <ion-icon name="male-female-outline"></ion-icon>
+      <svg
+        class="dato-svg"
+        width="32"
+        height="32"
+        viewBox="0 0 31.425 31.424"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g>
+          <g>
+            <path
+              d="M31.078,8.604c-0.006-0.005-0.014-0.009-0.018-0.014c-0.27-0.266-0.644-0.371-0.99-0.314l-4.002,0.052
+        c-0.633,0.009-1.139,0.528-1.131,1.161c0.008,0.631,0.487,1.102,1.16,1.13l1.34-0.017l-1.961,1.961
+        c-1.166-0.86-2.57-1.325-4.047-1.325c-1.826,0-3.543,0.711-4.834,2.002c-2.664,2.665-2.664,7.002,0,9.667
+        c1.291,1.291,3.008,2.002,4.834,2.002c1.825,0,3.543-0.711,4.834-2.002c2.36-2.362,2.633-6.035,0.811-8.696l2.059-2.053v1.499
+        c0,0.633,0.514,1.145,1.146,1.145c0.635,0,1.146-0.513,1.146-1.145V9.417C31.425,9.113,31.296,8.819,31.078,8.604z M24.643,21.287
+        c-1.716,1.716-4.709,1.716-6.427,0c-1.772-1.771-1.772-4.655,0-6.427c0.859-0.858,2-1.331,3.214-1.331
+        c1.215,0,2.354,0.473,3.215,1.331C26.416,16.631,26.416,19.516,24.643,21.287z"
+            />
+            <path
+              d="M6.839,5.538C3.069,5.538,0,8.604,0,12.374c0,3.34,2.415,6.128,5.576,6.721v2.066H3.784c-0.633,0-1.145,0.514-1.145,1.146
+        s0.512,1.146,1.145,1.146h1.792v1.287c0,0.633,0.514,1.146,1.147,1.146c0.633,0,1.148-0.515,1.148-1.146v-1.287h1.882
+        c0.633,0,1.146-0.516,1.146-1.146c0-0.635-0.513-1.146-1.146-1.146H7.871v-2.029c3.291-0.5,5.803-3.34,5.803-6.758
+        C13.674,8.604,10.609,5.538,6.839,5.538z M6.839,16.917c-2.507,0-4.545-2.039-4.545-4.545s2.038-4.545,4.545-4.545
+        c2.505,0,4.544,2.039,4.544,4.545S9.345,16.917,6.839,16.917z"
+            />
+          </g>
+        </g>
+      </svg>
       <div class="dato-label">Sexo</div>
       <div class="dato-valor">{{ mascota?.sexo }}</div>
     </div>
     <div class="dato-card">
-      <ion-icon name="barbell-outline"></ion-icon>
+      <svg
+        class="dato-svg"
+        width="32"
+        height="32"
+        viewBox="0 0 299.799 299.799"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M287.2,282.152l-31.829-177.579c-1.281-7.149-7.501-12.353-14.765-12.353h-52.935c9.925-9.776,16.093-23.357,16.093-38.356
+    C203.764,24.163,179.601,0,149.9,0S96.035,24.163,96.035,53.864c0,14.999,6.168,28.58,16.093,38.356H59.193
+    c-7.264,0-13.483,5.204-14.765,12.353L12.599,282.152c-0.783,4.372,0.41,8.866,3.261,12.272c2.85,3.406,7.063,5.374,11.504,5.374
+    h245.071c4.441,0,8.654-1.968,11.504-5.374C286.789,291.018,287.983,286.524,287.2,282.152z M149.9,30
+    c13.159,0,23.864,10.705,23.864,23.864c0,13.159-10.705,23.865-23.864,23.865c-13.159,0-23.865-10.706-23.865-23.865
+    C126.035,40.705,136.741,30,149.9,30z M145.98,232.126c-0.781,1.44-2.289,2.337-3.927,2.337h-7.076c-1.586,0-3.054-0.841-3.856-2.21
+    l-17.512-29.895L102.41,213.79v13.767c0,3.814-3.092,6.906-6.906,6.906c-3.814,0-6.906-3.092-6.906-6.906V172.96
+    c0-3.814,3.092-6.906,6.906-6.906c3.814,0,6.906,3.092,6.906,6.906v23.471l26.579-28.932c0.846-0.921,2.04-1.445,3.29-1.445h6.073
+    c1.794,0,3.413,1.072,4.114,2.723c0.7,1.651,0.345,3.561-0.901,4.85l-18.436,19.07l22.67,34.861
+    C146.692,228.933,146.762,230.685,145.98,232.126z M214.023,223.016c0,1.358-0.62,2.648-1.681,3.495
+    c-2.756,2.199-6.387,4.173-10.893,5.921c-5.492,2.131-11.053,3.196-16.683,3.196c-7.156,0-13.391-1.5-18.713-4.503
+    c-5.318-3.001-9.317-7.294-11.992-12.879c-2.676-5.584-4.013-11.657-4.013-18.222c0-7.123,1.493-13.455,4.48-18.991
+    c2.986-5.538,7.357-9.783,13.113-12.74c4.384-2.27,9.845-3.407,16.378-3.407c8.493,0,15.126,1.782,19.902,5.344
+    c2.069,1.543,3.818,3.342,5.247,5.396c1.366,1.963,1.643,4.484,0.737,6.696c-0.906,2.213-2.871,3.818-5.222,4.258l-0.016,0.003
+    c-2.754,0.515-5.546-0.705-7.037-3.077c-0.954-1.518-2.171-2.817-3.648-3.898c-2.661-1.944-5.982-2.916-9.963-2.916
+    c-6.036,0-10.835,1.914-14.395,5.739c-3.562,3.828-5.343,9.505-5.343,17.033c0,8.12,1.803,14.209,5.413,18.269
+    c3.608,4.059,8.336,6.089,14.186,6.089c2.892,0,5.793-0.567,8.702-1.703c2.907-1.136,5.404-2.513,7.489-4.129v-8.681h-10.055
+    c-3.183,0-5.762-2.58-5.762-5.762c0-3.183,2.58-5.762,5.762-5.762h19.539c2.468,0,4.468,2.001,4.468,4.468V223.016z"
+        />
+      </svg>
       <div class="dato-label">Peso</div>
       <div class="dato-valor">{{ mascota?.peso }} kg</div>
     </div>
     <div class="dato-card">
-      <ion-icon name="document-outline"></ion-icon>
+      <svg
+        class="dato-svg"
+        width="32"
+        height="32"
+        viewBox="0 0 512 512"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g>
+          <g>
+            <path
+              d="M443.103,71.306H416.76V44.963c0-5.142-4.167-9.31-9.31-9.31h-26.342V9.31c0-5.142-4.167-9.31-9.31-9.31h-302.9
+        c-5.143,0-9.31,4.169-9.31,9.31v422.074c0,5.142,4.167,9.31,9.31,9.31H95.24v26.342c0,5.142,4.167,9.31,9.31,9.31h26.342v26.342
+        c0,5.142,4.167,9.31,9.31,9.31h302.9c5.143,0,9.31-4.169,9.31-9.31V80.616C452.413,75.474,448.246,71.306,443.103,71.306z
+         M78.208,422.074V18.621h284.279v403.453H78.208z M113.862,457.726v-17.032h257.935c5.143,0,9.31-4.169,9.31-9.31V54.274h17.033
+        v403.453H113.862z M433.792,493.379H149.513v-17.032H407.45c5.143,0,9.31-4.169,9.31-9.31V89.927h17.032V493.379z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M271.292,95.592H169.404c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h101.887c5.143,0,9.31-4.169,9.31-9.31
+        S276.435,95.592,271.292,95.592z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M313.448,141.771h-186.2c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h186.2c5.143,0,9.31-4.169,9.31-9.31
+        S318.59,141.771,313.448,141.771z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M313.448,187.948h-186.2c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h186.2c5.143,0,9.31-4.169,9.31-9.31
+        S318.59,187.948,313.448,187.948z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M313.448,234.125h-186.2c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h186.2c5.143,0,9.31-4.169,9.31-9.31
+        S318.59,234.125,313.448,234.125z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M313.448,280.303h-186.2c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h186.2c5.143,0,9.31-4.169,9.31-9.31
+        S318.59,280.303,313.448,280.303z"
+            />
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M313.448,326.48h-186.2c-5.143,0-9.31,4.169-9.31,9.31s4.167,9.31,9.31,9.31h186.2c5.143,0,9.31-4.169,9.31-9.31
+        S318.59,326.48,313.448,326.48z"
+            />
+          </g>
+        </g>
+      </svg>
       <div class="dato-label">Ficha</div>
       <div class="dato-valor">{{ mascota?.fichaNumero }}</div>
     </div>
