--- a/src/app/pages/add-pet/add-pet.page.scss
+++ b/src/app/pages/add-pet/add-pet.page.scss
@@ -93,9 +93,23 @@ input[type="file"] {
 }
 
 .cancelar-btn {
-  --background: var(--green-matcha-light);
-  --color: var(--green-matcha-dark);
+  --background: var(--gray-bg) !important;
+  background: var(--gray-bg) !important;
+  --color: var(--green-matcha-dark) !important;
+  color: var(--green-matcha-dark) !important;
   font-weight: 600;
+  border: 1.5px solid var(--green-matcha-dark);
+  border-radius: 12px;
+}
+
+.guardar-btn {
+  --background: var(--green-matcha-dark) !important;
+  background: var(--green-matcha-dark) !important;
+  --color: #fff !important;
+  color: #fff !important;
+  font-weight: 600;
+  border: 1.5px solid var(--gray-bg);
+  border-radius: 12px;
 }
 
 ion-item ion-label + ion-datetime {
