style: update form layout and padding in add and edit pet pages

--- a/src/app/pages/add-pet/add-pet.page.html
+++ b/src/app/pages/add-pet/add-pet.page.html
@@ -56,9 +56,9 @@
       <ion-input type="number" [(ngModel)]="peso" name="peso"></ion-input>
     </ion-item>
 
-    <!-- Campo: Foto de la mascota -->
+    <!-- Campo: Foto -->
     <ion-item>
-      <ion-label>Foto de la mascota</ion-label>
+      <ion-label>Foto</ion-label>
       <input type="file" accept="image/*" (change)="onFotoSelected($event)" />
     </ion-item>
 
