--- a/src/app/pages/add-pet/add-pet.page.scss
+++ b/src/app/pages/add-pet/add-pet.page.scss
@@ -18,8 +18,8 @@ ion-toolbar.header {
 form {
   width: 100%;
   max-width: 400px;
-  margin: 32px auto 0 auto;
-  padding: 24px 18px 32px 18px;
+  margin: 0 auto 0 auto;
+  padding: 8px 10px 20px 10px; // Menos padding en la parte superior y general
   background: var(--gray-bg);
   border-radius: 18px;
   box-shadow: 0 2px 12px rgba(164, 192, 132, 0.08);
