style: update header title and input label positions for improved layout

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -38,7 +38,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-title class="titulo-home" fill="clear">Hola de nuevo!</ion-title>
+  <h1 class="titulo-home">Hola de nuevo!</h1>
 
   <!-- Banner de imagen justo bajo la barra -->
   <img src="assets/prueba1.jpg" alt="" class="fotoportada" />
