--- a/src/app/pages/reset-password/reset-password.page.scss
+++ b/src/app/pages/reset-password/reset-password.page.scss
@@ -30,6 +30,7 @@ ion-content {
   white-space: nowrap;
   font-weight: 500;
   position: static !important;
+  font-family: "Poppins", sans-serif !important;
 }
 
 ion-label[slot="floating"],
@@ -61,9 +62,17 @@ ion-label[slot="floating"],
   font-weight: 600;
   text-align: center;
   font-size: 24px;
-  font-family: 'century-gothic-paneuropean', sans-serif;
+  font-family: "century-gothic-paneuropean", sans-serif;
   border-radius: 0;
   box-shadow: 0 2px 8px rgba(164, 192, 132, 0.10);
+}
+
+p {
+  font-family: "Poppins", sans-serif !important;
+  color: var(--text-dark);
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .cambiar-button {
@@ -73,7 +82,7 @@ ion-label[slot="floating"],
   padding: 12px 24px;
   font-size: 14px;
   font-weight: 600;
-  font-family: 'century-gothic-paneuropean', sans-serif;
+  font-family: "Poppins", sans-serif !important;
   box-shadow: 0 2px 8px rgba(164, 192, 132, 0.10);
   transition: transform 0.15s;
 }
@@ -84,4 +93,17 @@ ion-label[slot="floating"],
 
 ion-input, ion-input input {
   color: var(--text-dark) !important;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("/assets/Poppins-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "century-gothic-paneuropean";
+  src: url("/assets/UoqMunThenKhung-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
