--- a/src/app/pages/pet-detail/pet-detail.page.scss
+++ b/src/app/pages/pet-detail/pet-detail.page.scss
@@ -16,6 +16,10 @@ ion-content {
   margin-bottom: 16px;
 }
 
+.eliminar-container.eliminar-center {
+  justify-content: center;
+}
+
 .eliminar-button {
   font-family: "poppins", sans-serif;
   text-transform: none !important;
@@ -30,6 +34,16 @@ ion-content {
   box-shadow: none;
   margin-top: 30px;
   margin-right: 30px;
+}
+
+.eliminar-button.eliminar-button-large {
+  font-size: 15px;
+  padding: 12px 24px;
+  height: 42px;
+  min-width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .texto-archivos {
